--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 kotlin = "2.1.0"
 compose = "1.7.3"
-android-plugin = "8.8.0"
+android-plugin = "8.7.2" # https://kotlinlang.org/docs/multiplatform-compatibility-guide.html#version-compatibility
 android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
