--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 xcuserdata
 !src/**/build/
 local.properties
-.idea
+.idea/*
+!.idea/codeStyles/
+!.idea/inspectionProfiles/
+!.idea/runConfigurations/
 .DS_Store
 captures
 .externalNativeBuild
